------------------------------------------------------------------------------
WANPIPE TDM VOICE - IP/WAN Package

------------------------------------------------------------------------------
Copyright (c) 1995-2023 Sangoma Technologies Inc.

For more info visit: http://wiki.sangoma.com
------------------------------------------------------------------------------

* Wed Dec 13 2023 Pushkar Singh <psingh@sangoma.com> - 7.0.37
==================================================================
- Support for ppp mode on kernel 6.1.x

* Tue Sep 05 2023 Pushkar Singh <psingh@sangoma.com> - 7.0.36
==================================================================
- Support for Kernel version 5.18.x - 6.1
- Support for Debian 11 with 6.1 kernel

* Wed Jun 29 2023 Pushkar Singh <psingh@sangoma.com> - 7.0.35
==================================================================
- Support for Kernel version 4.18 Centos 8
- Support for Kernel version 5.14.x - 5.18.x
- Support for Debian 10 and 11
- Support for Dell Server 750xs
- Support for Firmware upgrade for A108 cards

* Wed Sep 15 2021 Pushkar Singh <psingh@sangoma.com> - 7.0.34
==================================================================
- Support for Kernel version 5.9.x - 5.13.x
- Handle support of HAVE_UNLOCKED_IOCTL for kernel >= 5.9
- Handle support of set_fs / get_fs for kernel >= 5.10
- Handle suppot for get / set sockpot for kernel >= 5.10
- Handle MODPOST EXTERN SYMBOLS
- Support for Centos 8 & Debian 10

* Tue Apr 26 2021 Pushkar Singh <psingh@sangoma.com> - 7.0.32
==================================================================
- Support for Kernel version 5.x.x - 5.8.x
- Use proc_ops on kernels >= 5.6
- Include proper support 32/64 bit timer data type
- User of KBUILD_MODPOST_WARN to properly support EXPORT_DEPENDENCIES
- Wanpipe script support for Ubuntu LTS 20.04
- Makefile: 'M=' is preferred to 'SUBDIRS=' for external modules in order to build with latest 5.x kernels
