@@ -1,2 +1,2 @@
-wanpipe_linux: git ver be651c1
+wanpipe_linux: git ver 12291ad
 wanpipe_common: git ver 7665e91
