@@ -1,7 +1,7 @@
 %define KERNEL_VERSION    %{?kern_ver}
 %define WANPIPE_VER	  wanpipe
 %define name              %{WANPIPE_VER}
-%define version           7.0.38
+%define version           7.0.38.1
 %define release           0
 %define	serial	 	  1
 %define UTILS_DIR 	  /usr/sbin
@@ -245,6 +245,10 @@ chmod 755 /usr/local/sbin/setup-sangoma
 
 
 %changelog
+* Mon Feb 05 2024 Pushkar Singh <psingh@sangoma.com> - 7.0.38
+==================================================================
+- Support for Rocky Linux 9.x
+
 * Wed Dec 13 2023 Pushkar Singh <psingh@sangoma.com> - 7.0.37
 ==================================================================
 - Support for ppp mode on kernel 6.1.x
